# treepass-artifact

./: .gitignore  CMakeLists.txt  README.md  run_smoke.py
bench/: CMakeLists.txt  cmake_install.cmake  random_mixed_bench.cpp
bench/common/: config.h  key_generator.h  trace_io.h
bench/interface/: splinterdb_interface.h
examples/: gen_smoke_load.py
splinterdb/src/: btree.c  btree.h  cache.h  mini_allocator.h  routing_filter.c  routing_filter.h  splinterdb.c  treepass.c  treepass.h  trunk.c
treepass/: Makefile
treepass/include/splinterdb/: splinterdb.h
treepass/src/: btree_private.h  cache_trace.c  cache_trace.h  core.c  treepass.c  treepass.h
